Testando a inserção de dados no BD usando o método de incluir e algumas correções de erros.

--- a/app/src/main/res/layout/activity_cliente_pessoa_fisica_card.xml
+++ b/app/src/main/res/layout/activity_cliente_pessoa_fisica_card.xml
@@ -134,7 +134,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="16dp"
                 android:text="@string/btnSalvarContinuar"
-                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse" />
+                android:textStyle="bold"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -165,7 +166,8 @@
                 android:layout_weight="1"
                 android:onClick="voltaClienteVip"
                 android:text="@string/btnVoltar"
-                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse" />
+                android:textStyle="bold"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large" />
 
             <Button
                 android:id="@+id/btnCancelar"
@@ -175,7 +177,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:text="@string/btnCancelar"
-                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse" />
+                android:textStyle="bold"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
