--- a/app/src/main/res/layout/activity_cadastro_usuario_card.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario_card.xml
@@ -216,7 +216,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:text="@string/btnCadastro"
-                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse" />
+                android:textStyle="bold"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
