--- a/app/src/main/res/layout/activity_cliente_vip_card.xml
+++ b/app/src/main/res/layout/activity_cliente_vip_card.xml
@@ -165,7 +165,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="16dp"
                 android:text="@string/btnSalvarContinuar"
-                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse" />
+                android:textStyle="bold"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large" />
 
             <Button
                 android:id="@+id/btnCancelar"
@@ -175,7 +176,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="16dp"
                 android:text="@string/btnCancelar"
-                android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse" />
+                android:textStyle="bold"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
