--- a/app/src/main/res/layout/activity_login_novo.xml
+++ b/app/src/main/res/layout/activity_login_novo.xml
@@ -88,6 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:layout_weight="1"
+                android:onClick="lembrarSenha"
                 android:text="@string/txtLembrar"
                 android:textStyle="bold" />
 
