--- a/app/src/main/res/layout/activity_atualizar_meus_dados.xml
+++ b/app/src/main/res/layout/activity_atualizar_meus_dados.xml
@@ -174,6 +174,7 @@
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="5dp"
                             android:layout_weight="1"
+                            android:onClick="salvarCardCliente"
                             android:text="@string/btnSalvar"
                             android:enabled="false"
                             android:textStyle="bold"
@@ -271,6 +272,7 @@
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="5dp"
                             android:layout_weight="1"
+                            android:onClick="salvarCardPF"
                             android:text="@string/btnSalvar"
                             android:enabled="false"
                             android:textStyle="bold"
@@ -416,6 +418,7 @@
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="5dp"
                             android:layout_weight="1"
+                            android:onClick="salvarCardPJ"
                             android:text="@string/btnSalvar"
                             android:enabled="false"
                             android:textStyle="bold"
@@ -514,6 +517,7 @@
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="5dp"
                             android:layout_weight="1"
+                            android:onClick="salvarCardCredenciais"
                             android:text="@string/btnSalvar"
                             android:enabled="false"
                             android:textStyle="bold"
